--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "homepage": "https://Oleksandr1301.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
-    "@chakra-ui/react": "^2.5.1",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@chakra-ui/react": "^2.7.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/poppins": "^4.5.10",
-    "@reduxjs/toolkit": "^1.9.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.3",
+    "axios": "^1.4.0",
     "framer-motion": "^9.1.7",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
@@ -23,7 +23,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.12.1",
+    "react-router-dom": "^6.11.1-pre.0",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
